# LFM2 model family.
# Top-level entry point under Applications/CausalLM/models/. Each variant
# of the LFM2 family lives in its own subdirectory:
#   lfm2-vl/  — LFM2.5-VL multimodal (vision tower + LLM + projector).
# (Standalone LFM2 LLM and other variants can be added as siblings here.)
subdir('lfm2-vl')
