# SPDX-License-Identifier: Apache-2.0
# YOLOv7 detection inference example

yolov7_infer_src = [
  meson.current_source_dir() / 'main.cpp',
]

yolov7_inc = include_directories('.', '../../../third_party')

yolov7_infer = executable('yolov7_infer',
  yolov7_infer_src,
  include_directories: [yolov7_inc],
  dependencies: [nntrainer_dep, nntrainer_ccapi_dep],
  build_by_default: get_option('enable-app'),
  install: false,
)
